--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,8 +26,11 @@ jobs:
           with:
             channel: 'beta'
         - run: flutter pub get
-        - run: flutter build apk --no-sound-null-safety
+         # Build apk.
+        - run: flutter build apk
+
+        # Upload generated apk to the artifacts.
         - uses: actions/upload-artifact@v1
           with:
             name: release-apk
-            path: /build/app/outputs/flutter-apk/app-release.apk
+            path: build/app/outputs/apk/release/app-release.apk
