--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_analytics: ^10.1.4
-
+  theme_manager: ^1.1.1
+  iconswitcher: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
