--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +40,8 @@ dependencies:
   firebase_analytics: ^10.1.4
   theme_manager: ^1.1.1
   iconswitcher: ^2.0.2
+  localization: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +58,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  # json files directory
+  assets:
+    - lib/i18n/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
