--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   theme_manager: ^1.1.1
   iconswitcher: ^2.0.2
   localization: ^2.1.0
+  firebase_crashlytics: ^3.0.15
 
 dev_dependencies:
   flutter_test:
