--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_crashlytics: ^3.0.15
   icons_launcher: ^2.1.0
   easy_splash_screen: ^1.0.4
+  responsive_sizer: ^3.1.1
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
