--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  boardview:
+    git:
+      url: https://github.com/kovilevi98/FlutterBoardView
+      ref: master # optional branch name
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +50,9 @@ dependencies:
   easy_splash_screen: ^1.0.4
   responsive_sizer: ^3.1.1
   font_awesome_flutter: ^10.4.0
+  mobx: ^2.1.4
+  mobx_codegen: ^2.1.1
+  flutter_mobx: ^2.0.6+5
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  built_value_generator: ^8.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
