--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
   mobx_codegen: ^2.1.1
   flutter_mobx: ^2.0.6+5
   dropdown_button2: ^2.0.0
+  cloud_firestore: ^4.4.3
+  firebase_core: ^2.7.0
+  json_annotation: ^4.8.0
+  uuid: ^3.0.7
+  fake_cloud_firestore: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +72,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   built_value_generator: ^8.4.3
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
