--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ dependencies:
   stop_watch_timer: ^2.0.0
   custom_sidemenu: ^0.0.3
   intl: ^0.17.0
+  csv: ^5.0.1
+  path_provider: ^2.0.13
+  random_string: ^2.3.1
+  permission_handler: ^7.1.0
+  glass_kit: ^2.0.1
 
 dev_dependencies:
   flutter_test:
